@@ -9,6 +9,7 @@ parameters:
 
 performance improvements:
 - stop separation in cons_indicator after maxsepanonviolated many non violated separated cuts
+- improve choice of variable to enter support in separation of cons_indicator
 
 SCIP version 4.0.0
 ==================
